03/30/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed memory error's found due to valgrind.

03/28/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed a bug in the C/C++ tokenizer to highlight source code.

07/28/2004 Bob Rossi <bob@brasko.net>

    * NEWS: Added 'autosourcereload' option and 'source_reload' colon command.
	* README: Documents autosourcereload and source_reload

version 0.5.0 (07/14/2004):

07/12/2004 Bob Rossi <bob@brasko.net>

    * release-todo.txt: Update instructions

07/12/2004 Bob Rossi <bob@brasko.net>

    * configure.in: Changed version number to 0.5.0 for release

07/12/2004 Bob Rossi <bob@brasko.net>

    * NEWS: Fixed a crash in TGDB (buffering commands). Added libkui to CGDB.

06/14/2004 Bob Rossi <bob@brasko.net>

    * NEWS: A fixed crash when parsing the CLI.

version 0.4.2 (05/10/2004):
version 0.4.1 (04/26/2004):

03/31/2004 Bob Rossi <bob@brasko.net>

    * NEWS: A note about fixing a major memory leak in CGDB.
	
03/22/2004 Bob Rossi <bob@brasko.net>

    * Makefile.am: Add doxygen rule to build ./various,./tgdb,./cgdb
	* Makefile.in: Update for people without auto tools

03/02/2004 Bob Rossi <bob@brasko.net>
	
    * Makefile.am: Add doxygen rule for cgdb/lib
	* Makefile.in: Update for people without auto tools

02/27/2004 Bob Rossi <bob@brasko.net>

    * configure.in (AC_OUTPUT): Add cgdb/lib, cgdb/lib/kui and
	cgdb/lib/kui/src

01/09/2004 Bob Rossi <bob@brasko.net>

   * NEWS: Updated to say CGDB now compiles on the HURD 

01/08/2004 Bob Rossi <bob@brasko.net>

   * Makefile.in: regenerated with documented autotools version
	* aclocal.m4: ditto
	* configure: ditto
	* various/Makefile.in: ditto

01/08/2004 Bob Rossi <bob@brasko.net>

    * Merged branch: Ronald's cygwin_package_0_4_0 branch

version 0.4.0-1 cygwin release

12/12/2003 Ronald Landheer-Cieslak <ronald@landheer.com>

    * Makefile.in: regenerated
    * aclocal.m4: ditto
    * configure: ditto
    * various/Makefile.in: ditto

11/16/2003 Bob Rossi <bob@brasko.net>
