@@ -68,8 +68,9 @@ static char *cgdb_help_text[] = {
 "    :quit        -> Quit cgdb (may be abbreviated as :q)",
 "    :quit!       -> Quit cgdb, even if debugged program is running (abbreviated",
 "                    as :q!)",
-"    :sourcereload -> reloads the file in the source window. This can be useful",
-"                   if the file has changed since it was opened by CGDB.",
+"    :edit        -> reloads the file in the source window. This can be useful",
+"                    if the file has changed since it was opened by CGDB.",
+"                    (abbreviated as :e)",
 "",
 "    The following variables change the behavior of some aspect of cgdb.  Many",
 "    of these commands may be abbreviated in some way, and all boolean commands",
