@@ -24,9 +24,8 @@ CVS
    It is capable of reloading a source file when CGDB detects that a file has
    been modified. To turn this feature off do ':set noasr'.
 
-   * The :source_reload colon command has been implemented. It forces CGDB to
+   * The :edit [:e] colon command has been implemented. It forces CGDB to
    reload the current file in the source viewer.
-
 
 cgdb-0.5.0 (07/14/2004)
 
