@@ -1,3 +1,9 @@
+03/31/2005 Bob Rossi <bob@brasko.net>
+
+    * helptext.h: Updated the README file.
+	* cgdbrc.c (COMMANDS): Remove source_reload and add edit
+	* sources.c (load_file): Init more data in node->orig_buf
+
 03/30/2005 Bob Rossi <bob@brasko.net>
 
 	* sources.h (list_node): Remove covered_lines field.
